--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,13 @@
 All colors MUST be HSL.
 */
 
+body {
+  margin: 0;
+  padding: 0;
+  background: url("https://roarrealty.ae/picture/IMG_20250904_203122-min.png") no-repeat center center fixed;
+  background-size: cover;
+}
+
 @layer base {
   :root {
     --background: 0 0% 100%;
